tests/ui/frontmatter/frontmatter-with-body.rs
---
//~^ ERROR expected item, found `-`
[dependencies]
---

#![feature(frontmatter)]

fn main() {
}
